= Changelog

== 0.4.2 (unreleased)
* BUG: Fixed proxy authentication

== 0.4.1 (2008-04-23)
* BUG: Use CGI.escape instead of URI.escape, since URI.escape does not
  escape URI special characters (?=&)
* BUG: Handle socket error exceptions in class Webservice (will now raise a
  ConnectionError)
* NEW: Control files for building debian packages
* NEW: Better documentation

== 0.4.0 (2007-12-16)
* NEW: Complete tagging (folksonomy) support.
* NEW: Support release event format.
* NEW: Support for HTTP proxies

== 0.3.0 (2007-08-11)
* BUG: Relation end date was not set correctly in MBXML.
* NEW: Allow release type constants to be passed to include and filter objects.
* NEW: Methods Utils.add_namespace and Utils.remove_namespace.
* NEW: Methods Release#earliest_release_event and Release#earliest_release_date
* NEW: Entity#get_relations allows string with or without namespace for
  target_type, relation_type and required_attributes

== 0.2.1 (2007-07-24)
* Erroneous date strings in the XML are ignored. No error is raised and nil
  is set for the date.
* MBXML#get_entity_list now returns an ScoredCollection even if no list-element
  is present in the XML. This is due to the fact that musicbrainz.org always
  returns an empty result <metadata/> if no matching entities were found.
* Removed custom eql? and include? methods from Range and added them to
  IncompleteDate. Those methods changed the behaviour of Range which might lead
  to unexcpected results in programs using RBrainz.
* Changed IncompleteDate to include its end value.
* Added additional examples

== 0.2.0 (2007-07-19)
* Querying of collections implemented
* Collection class to store search results (with support for search score and offset)
* User authentication
* Querying of user information
* Support POST in Webservice class to submit information.
* PUID submission.
* Made IncompleteDate behave like a range with corresponding equality operations
* Restructured MBID to use a ducktyping approach